--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1,13 +1,19 @@
-@import "./header.css";
+/*font*/
+
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap');
+/*camponete*/
+@import "./header.css"; 
+@import "./button.css"; 
+/*reset css*/
 *{
+   
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
+font-family: "Source Sans Pro" ,sans-serif;
 font: inherit;
 vertical-align: baseline;
-
-
-
-
+text-decoration: none;
 }
