--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -17,3 +17,14 @@ font: inherit;
 vertical-align: baseline;
 text-decoration: none;
 }
+.container{
+    width: 1024px;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+
+}
+.row{
+    display: flex;
+    flex-direction: row;
+}
